--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="A laughing lion">
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="A laughing lion" title="We are here to have fun">
   </body>
 </html>
